--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,15 @@
     display: flex;
     justify-content: center;
     align-items: baseline;
-    background-color: aquamarine;
+    background-color: #ffe521;
+    width: 100%;
+    height: 90px;
+   
+}
+.lab{
+    width: 200px;
+    height: 100px;
+    float: left;
     
 }
 #logo{
@@ -12,13 +20,19 @@
     margin-top: 10px;
 }
 h2{
-    margin-left: 10px;
-    font-size: 30px;
-    align-self: center;
+    display: flex;
+    margin-bottom: 15px;
+   justify-content: flex-end;
+    margin-left: 5px;
+    font-size: 25px;
+ 
+
+}
+
 }
 /* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color:#56f89a;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -28,7 +42,7 @@ h2{
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+    background-color: #56f89a;
 }
 
 /* The search field */
