--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,14 @@ h2{
    justify-content: flex-end;
     margin-left: 5px;
     font-size: 25px;
- 
 
 }
 
+nav{
+    width: 100%;
+    height: 50%;
+    text-align: center;
+    background-color: rgb(240, 233, 233);
 }
 /* Dropdown Button */
 .dropbtn {
@@ -47,7 +51,7 @@ h2{
 
 /* The search field */
 #myInput {
-  border-box: box-sizing;
+ 
   background-image: url('searchicon.png');
   background-position: 14px 12px;
   background-repeat: no-repeat;
