--- a/dadosgrafico.css
+++ b/dadosgrafico.css
@@ -1,10 +1,119 @@
 AQP - 2016-2  :active === 7; inative === 8;
+sprint 1 teacher: 3.6
+            jedi: 3.6
+            'nps':
+              'promoters': 70,
+              'passive': 15,
+              'detractors': 15
+
+sprint 2 teacher: 3.8
+            jedi: 3.4
+            'nps': 
+                'promoters': 74,
+                'passive': 16,
+                'detractors': 10
+sprint 3 teacher: 3.8
+            jedi: 4.3
+            'nps': 
+                'promoters': 78,
+                'passive': 13,
+                'detractors': 9
+sprint 4  teacher: 3.2
+            jedi: 4.8
+            'nps':
+                'promoters': 78,
+                'passive': 15,
+                'detractors': 7
 AQP - 2017-1  :active ==== 8; inative === 7;
+sprint 1 teacher: 4.7
+            jedi: 4.9
+            'nps': 
+                'promoters': 97,
+                'passive': 3,
+                'detractors': 0
+sprint 2 teacher: 4.4
+            jedi: 4.3
+            'nps':
+                'promoters': 81,
+                'passive': 17,
+                'detractors': 2
+sprint 3 teacher: 3.4
+            jedi: 4.1
+            'nps':
+                'promoters': 87,
+                'passive': 15,
+                'detractors': 8
 CDM - 2017-1 :active === 9; inative === 15;
+sprint 1   teacher: 3.7
+            jedi: 4.1
+            'nps': 
+                'promoters': 90,
+                'passive': 7,
+                'detractors': 3
+sprint 2  teacher: 3.6
+            jedi: 3.7
+            nps': 
+                'promoters': 72,
+                'passive': 18,
+                'detractors': 10
+sprint 3    teacher: 4.1
+            jedi: 3.8
+            'nps': 
+                'promoters': 84,
+                'passive': 16,
+                'detractors': 0
+
 CDM - 2017-2 :active === 21; inative === 25;
+sprint 1   teacher: 4.4
+            jedi: 4.7
+            
+sprint 2   teacher: 4.1
+            jedi: 4.2
+
 LIM - 2016-2 :active === 16; inative === 19;
+sprint 1    teacher: 4.0
+            jedi: 4.6
+sprint 2    teacher: 4.2
+            jedi: 4.8
+
 LIM - 2017-1 :active === 12; inative === 5;
+sprint 1    teacher: 4.0
+            jedi: 4.6
+sprint 2    teacher: 3.7
+            jedi: 3.5
+sprint 3    teacher: 4.0
+            jedi: 4.3
+sprint 4    teacher: 3.5
+            jedi: 4.2
+
 LIM - 2017-2 :active === 6;  inative === 8;
+sprint 1     teacher: 4.8
+             jedi: 4.3
+sprint 2    teacher: 3.2
+            jedi: 4.7
+
 SCL - 2016-2 :active === 3; inative ===  8
+sprint 1    teacher: 4.4
+            jedi: 4.5
+sprint 2    teacher: 4.5
+            jedi: 4.0
+sprint 3    teacher: 3.7
+            jedi: 4.2
+sprint 4    teacher: 3.7
+            jedi: 4.5
+
 SCL - 2017-1 :active === 14; inative === 9;
+sprint 1    teacher: 4.2
+            jedi:4.6
+sprint 2    teacher:4.6
+            jedi:4.4
+sprint 3    teacher:4.6
+            jedi:4.1
+
+
 SCL - 2017-2 :active ====  26; inative ==== 33;
+sprint 1    teacher: 4.0
+            jedi: 4.8
+sprint 2    teacher: 3.9
+            jedi: 4.3
+alunas satisfeitas: 
