--- a/dadosgrafico.css
+++ b/dadosgrafico.css
@@ -1,6 +1,6 @@
 AQP - 2016-2  :active === 7; inative === 8;
-sprint 1 teacher: 3.6
-            jedi: 3.6
+sprint 1 teacher: 3.6 médis teacher - 3,6
+            jedi: 3.6 média jedi - 4,025
             'nps':
               'promoters': 70,
               'passive': 15,
@@ -25,7 +25,7 @@ sprint 4  teacher: 3.2
                 'passive': 15,
                 'detractors': 7
 AQP - 2017-1  :active ==== 8; inative === 7;
-sprint 1 teacher: 4.7
+sprint 1 teacher: 4.7 média teacher 4,17
             jedi: 4.9
             'nps': 
                 'promoters': 97,
@@ -66,45 +66,104 @@ sprint 3    teacher: 4.1
 CDM - 2017-2 :active === 21; inative === 25;
 sprint 1   teacher: 4.4
             jedi: 4.7
-            
+            'nps': 
+                'promoters': 87,
+                'passive': 8,
+                'detractors': 5
+
 sprint 2   teacher: 4.1
             jedi: 4.2
+            'nps': 
+                'promoters': 97,
+                'passive': 3,
+                'detractors': 0
 
 LIM - 2016-2 :active === 16; inative === 19;
 sprint 1    teacher: 4.0
             jedi: 4.6
+            nps': 
+                'promoters': 88,
+                'passive': 6,
+                'detractors': 6
 sprint 2    teacher: 4.2
             jedi: 4.8
-
+            'nps': 
+                'promoters': 84,
+                'passive': 8,
+                'detractors': 8
 LIM - 2017-1 :active === 12; inative === 5;
 sprint 1    teacher: 4.0
             jedi: 4.6
+            'nps': 
+                'promoters': 74,
+                'passive': 16,
+                'detractors': 10
 sprint 2    teacher: 3.7
             jedi: 3.5
+            'nps': 
+                'promoters': 78,
+                'passive': 14,
+                'detractors': 8
 sprint 3    teacher: 4.0
             jedi: 4.3
+            'nps': 
+                'promoters': 79,
+                'passive': 15,
+                'detractors': 6
 sprint 4    teacher: 3.5
             jedi: 4.2
+            'nps': 
+                'promoters': 70,
+                'passive': 25,
+                'detractors': 5
 
 LIM - 2017-2 :active === 6;  inative === 8;
 sprint 1     teacher: 4.8
              jedi: 4.3
+             'nps': 
+                'promoters': 94,
+                'passive': 6,
+                'detractors': 0
 sprint 2    teacher: 3.2
             jedi: 4.7
+            'nps': 
+                'promoters': 71,
+                'passive': 13,
+                'detractors': 16
 
 SCL - 2016-2 :active === 3; inative ===  8
 sprint 1    teacher: 4.4
             jedi: 4.5
+            'nps': 
+                'promoters': 81,
+                'passive': 10,
+                'detractors': 9
 sprint 2    teacher: 4.5
             jedi: 4.0
+            'nps': 
+                'promoters': 97,
+                'passive': 3,
+                'detractors': 0
 sprint 3    teacher: 3.7
             jedi: 4.2
+            'nps': 
+                'promoters': 77,
+                'passive': 12,
+                'detractors': 1
 sprint 4    teacher: 3.7
             jedi: 4.5
+            'nps': 
+                'promoters': 87,
+                'passive': 8,
+                'detractors': 5
 
 SCL - 2017-1 :active === 14; inative === 9;
 sprint 1    teacher: 4.2
             jedi:4.6
+            'nps': 
+                'promoters': 87,
+                'passive': 13,
+                'detractors': 0
 sprint 2    teacher:4.6
             jedi:4.4
 sprint 3    teacher:4.6
